Fix snackbar getting too wide with errors

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
 .snackbarContainer {
     margin-top: 64px;
+    max-width: 30%;
+    word-break: break-word;
 }
